[package]
name = "anna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.9", features = ["winuser", "minwindef", "handleapi", "processthreadsapi", "memoryapi", "psapi", "sysinfoapi"] }
mouse-rs = "0.4.2"